[package]
name = "bible-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = ["derive", "cargo"] }
reqwest = "0.11.18"
tokio = {version = "1.28.2", features = ["macros", "rt-multi-thread"]}
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0", features = ["derive"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
sha256 = "1.1.4"
chrono = "0.4.26"
rand = "0.8.5"
serde_json = "1.0.99"

